--- a/main-auction-service/src/main/resources/application.properties
+++ b/main-auction-service/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 logging.level.root=INFO
 spring.application.name=auctionSite
 
-spring.jpa.properties.hibernate.jdbc.time_zone = UTC
-spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.open-in-view=false
+javax.persistence.query.timeout=3000
