add of some properties and lock remove on user

--- a/main-auction-service/src/main/resources/application.properties
+++ b/main-auction-service/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 logging.level.root=INFO
 spring.application.name=auctionSite
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=reallyNot10Generated_Passw0rd
+
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
