--- a/main-auction-service/src/main/resources/application.properties
+++ b/main-auction-service/src/main/resources/application.properties
@@ -6,3 +6,11 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.open-in-view=false
+
+spring.kafka.bootstrap-servers=localhost:29093
+spring.kafka.consumer.group-id=auction-main-service
+spring.kafka.consumer.enable-auto-commit=false
+spring.kafka.listener.ack-mode=manual_immediate
+
+topic-lot-purchase-request=lot-purchase
+topic-lot-purchase-result=lot-purchase-response
