not yet finished

--- a/main-auction-service/src/main/resources/application.properties
+++ b/main-auction-service/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.kafka.listener.ack-mode=manual_immediate
 
 topic-lot-purchase-request=lot-purchase
 topic-lot-purchase-result=lot-purchase-response
+
+finished-lots-check-delay=60000
