--- a/main-auction-service/src/main/resources/application.properties
+++ b/main-auction-service/src/main/resources/application.properties
@@ -21,3 +21,5 @@ topic-lot-purchase-request=lot-purchase
 topic-lot-purchase-result=lot-purchase-response
 
 finished-lots-check-delay=60000
+outbox-attempt-frequency=PT1S
+outbox-flush-frequency=1000
