changes to db in primary microservice

--- a/main-auction-service/src/main/resources/application.properties
+++ b/main-auction-service/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.open-in-view=false
 javax.persistence.query.timeout=3000
+
+resilience4j.retry.instances.user-generation.retry-exceptions[0]=Exception
+resilience4j.retry.instances.user-generation.wait-duration=0ms
+resilience4j.retry.instances.user-generation.max-attempts=3
