changes for db split, phase 1

--- a/main-auction-service/src/main/resources/application.properties
+++ b/main-auction-service/src/main/resources/application.properties
@@ -17,6 +17,7 @@ spring.kafka.consumer.group-id=auction-main-service
 spring.kafka.consumer.enable-auto-commit=false
 spring.kafka.listener.ack-mode=manual_immediate
 
+topic-user-creation-request=user-create
 topic-lot-purchase-request=lot-purchase
 topic-lot-purchase-result=lot-purchase-response
 
