--- a/main-auction-service/pom.xml
+++ b/main-auction-service/pom.xml
@@ -120,6 +120,10 @@
 			<artifactId>transactionoutbox-spring</artifactId>
 			<version>5.5.447</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
