--- a/main-auction-service/src/main/resources/application.properties
+++ b/main-auction-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 logging.level.root=INFO
+logging.level.org.springframework.security=DEBUG
 spring.application.name=auctionSite
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
