--- a/main-auction-service/src/main/resources/application.properties
+++ b/main-auction-service/src/main/resources/application.properties
@@ -2,6 +2,10 @@ logging.level.root=INFO
 logging.level.org.springframework.security=DEBUG
 spring.application.name=auctionSite
 
+spring.thymeleaf.cache=false
+spring.web.resources.cache.period=0
+spring.thymeleaf.prefix=classpath:/templates/
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=reallyNot10Generated_Passw0rd
