--- a/main-auction-service/src/main/resources/application.properties
+++ b/main-auction-service/src/main/resources/application.properties
@@ -30,6 +30,6 @@ finished-lots-check-delay=60000
 outbox-attempt-frequency=PT1S
 outbox-flush-frequency=1000
 
-resilience4j.retry.instances.user-generation.retry-exceptions[0]=Exception
+resilience4j.retry.instances.user-generation.retry-exceptions[0]=java.lang.Exception
 resilience4j.retry.instances.user-generation.wait-duration=0ms
 resilience4j.retry.instances.user-generation.max-attempts=3
